--- a/src/assets/styles/core/_base.scss
+++ b/src/assets/styles/core/_base.scss
@@ -31,8 +31,7 @@ img {
   --color-yellow: #{$yellow};
   --color-red: #{$red};
   --color-blue: #{$blue};
-  --color-grey-dark: #{$grey--dark};
-  --color-grey: #{$grey};
+  --color-grey-dark: #{$dark};
   --color-grey-light: #{$grey--light};
   --color-grey-transparent: #{$grey--transparent};
   --color-white: #{$white};
