--- a/src/assets/styles/_settings.scss
+++ b/src/assets/styles/_settings.scss
@@ -9,11 +9,11 @@ $xlarge-min: 1440px;
 $xxlarge-min: 1920px;
 
 // 02. Colours
-$yellow: #ffd068;
-$red: #f56d4c;
-$blue: #8bd1d0;
-$grey--dark: #2e3649;
-$grey: #485570;
+$yellow: #f3a712;
+$red: #db2b39;
+$blue: #29335c;
+$dark: #534d41;
+$pink: #ffbdd1;
 $grey--light: #9599a2;
 $grey--transparent: rgba(0, 7, 18, 0.6);
 $white: #dfe4e6;
@@ -21,10 +21,10 @@ $bright-white: #f6f7f9;
 $black: #0a0a0a;
 $white: #fff;
 
-$body-background-color: $bright-white;
-$default-font-color: $grey;
-$default-link-color: $grey;
-$default-hover-color: $grey--dark;
+$body-background-color: $yellow;
+$default-font-color: $dark;
+$default-link-color: $dark;
+$default-hover-color: $red;
 
 // 03. Type
 $avenir: avenir, helvetica, arial, sans-serif;
