Route change closes menu - as well as window resize

--- a/src/assets/styles/_settings.scss
+++ b/src/assets/styles/_settings.scss
@@ -9,19 +9,19 @@ $xlarge-min: 1440px;
 $xxlarge-min: 1920px;
 
 // 02. Colours
-$yellow: #f3a712;
+$orange: #f79824;
 $red: #db2b39;
-$blue: #29335c;
+$jet: #30323d;
 $dark: #534d41;
-$pink: #ffbdd1;
+$purple: #a997df;
 $grey--light: #9599a2;
 $grey--transparent: rgba(0, 7, 18, 0.6);
 $white: #dfe4e6;
-$bright-white: #f6f7f9;
+$bright-white: #f0f5e0;
 $black: #0a0a0a;
 $white: #fff;
 
-$body-background-color: $yellow;
+$body-background-color: $orange;
 $default-font-color: $dark;
 $default-link-color: $dark;
 $default-hover-color: $red;
