--- a/src/assets/styles/core/_base.scss
+++ b/src/assets/styles/core/_base.scss
@@ -28,9 +28,9 @@ img {
 }
 
 :root {
-  --color-yellow: #{$yellow};
+  --color-yellow: #{$orange};
   --color-red: #{$red};
-  --color-blue: #{$blue};
+  --color-blue: #{$jet};
   --color-grey-dark: #{$dark};
   --color-grey-light: #{$grey--light};
   --color-grey-transparent: #{$grey--transparent};
