--- a/src/assets/styles/core/_type.scss
+++ b/src/assets/styles/core/_type.scss
@@ -10,11 +10,7 @@ body {
 a {
   color: $default-link-color;
   font-weight: 700;
-  text-decoration: underline;
-
-  &:hover {
-    color: $default-hover-color;
-  }
+  text-decoration: none;
 }
 
 h1,
